# test_yadro_1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: FileTape.h  TapeDevice.h  TapeSorter.h
sad/: CMakeCache.txt  Makefile  cmake_install.cmake  config.txt  test_turing  turing
src/: FileTape.cpp  TapeSorter.cpp
test/: sort_test.cpp  test_classes.cpp  test_classes.h
